add_library( Codfig codfig.cpp codfig.h codfigmodel.cpp codfigmodel.h codfigmodel_t.h codfigexceptions.cpp codfigexceptions.h codfigio.h codfigio_t.h codfigio.cpp codfigfileio.h codfigfileio.cpp )
#add_library( Codfig STATIC codfig.cpp codfig.h codfigmodel.cpp codfigmodel.h codfigmodel_t.h codfigexceptions.cpp codfigexceptions.h codfigio.h codfigio.cpp codfigfileio.h codfigfileio.cpp )
#add_library( Codfig_SHARED SHARED codfig.cpp codfig.h codfigmodel.cpp codfigmodel.h codfigmodel_t.h codfigexceptions.cpp codfigexceptions.h codfigio.h codfigio.cpp codfigfileio.h codfigfileio.cpp )
#set_target_properties( Codfig_SHARED PROPERTIES OUTPUT_NAME "Codfig")
